--- a/操作系统课程设计/操作系统课程设计.vcxproj.filters
+++ b/操作系统课程设计/操作系统课程设计.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="操作系统课程设计.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
