--- a/操作系统课程设计/操作系统课程设计.vcxproj
+++ b/操作系统课程设计/操作系统课程设计.vcxproj
@@ -149,11 +149,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Monitor.h" />
     <ClInclude Include="PCB.h" />
+    <ClInclude Include="Process.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="System.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Process.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
