完善进程类，完成部分系统类函数

--- a/操作系统课程设计/操作系统课程设计.vcxproj
+++ b/操作系统课程设计/操作系统课程设计.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="System.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
