基本完成所有功能 还有自动执行功能未开工

--- a/操作系统课程设计/操作系统课程设计.vcxproj
+++ b/操作系统课程设计/操作系统课程设计.vcxproj
@@ -149,7 +149,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Monitor.h" />
+    <ClInclude Include="algorithm.h" />
     <ClInclude Include="PCB.h" />
     <ClInclude Include="Process.h" />
     <ClInclude Include="stdafx.h" />
@@ -157,6 +157,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="algorithm.cpp" />
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="main.cpp" />
