--- a/操作系统课程设计/操作系统课程设计.vcxproj.filters
+++ b/操作系统课程设计/操作系统课程设计.vcxproj.filters
@@ -30,10 +30,10 @@
     <ClInclude Include="PCB.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Monitor.h">
+    <ClInclude Include="System.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="System.h">
+    <ClInclude Include="algorithm.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -48,6 +48,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="System.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="algorithm.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
