--- a/操作系统课程设计/操作系统课程设计.vcxproj.filters
+++ b/操作系统课程设计/操作系统课程设计.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="algorithm.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="get.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -51,6 +54,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="algorithm.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="get.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
